--- a/geeksalon/index.html
+++ b/geeksalon/index.html
@@ -9,11 +9,11 @@
   
   <link rel="stylesheet" href="https://amazonessari.github.io/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.d2f3566fac498871ba2bc173cd6fd4e67d1d3a79a83ec6471ad90f0a62653ea7.css">
+  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.d15b8c6635afcff5c215622ff1c39095c74c9b51feba4b08711b4fc7dfbfbb6b.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
-  <script src="https://amazonessari.github.io/js/script.min.0bac2cd72902487830b700304a293709b099e6491f758ca450e94f1d95c95285.js" defer
-    integrity="sha256-C6ws1ykCSHgwtwAwSik3CbCZ5kkfdYykUOlPHZXJUoU="></script>
+  <script src="https://amazonessari.github.io/js/script.min.d6ae15ab517e2e939e0bfa8d90418dd4ed0bf3302a42386657ec026afe599c02.js" defer
+    integrity="sha256-1q4Vq1F+LpOeC/qNkEGN1O0L8zAqQjhmV+wCav5ZnAI="></script>
 
   
   
@@ -202,7 +202,7 @@ I designed a landing page for the trial event limited to female students.</p>
           <p>Born in 1997, in Japan. I, a former backpacker, started my design career from scratch as a full-time intern
             at the
             start-up <a target="_blank" href="https://sc0ville.com">Scoville</a> in May 2019.
-            I improved my design and coding skills rapidly, by building 5 websites/pages, after working on assignments
+            I improved my design and coding skills rapidly by building 5 websites/pages, after working on assignments
             from our
             senior designer for several months. I am the case that the length of experience does not matter because I am
             more
