--- a/manoma/index.html
+++ b/manoma/index.html
@@ -9,7 +9,7 @@
   
   <link rel="stylesheet" href="https://amazonessari.github.io/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.acb4047e26222c92b84bbb2ca10d66a96d11cafa649c9666f22abcf4275f676d.css">
+  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.5a8cbfe1b2492f9a4cc2deb85b417802fe7b14c201bdb05d47630189df1e6915.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
   <script src="https://amazonessari.github.io/js/script.min.7cf1223efd4ed1f8bbfb3ba43f8e3d20a2df8017520c2891f1f927688f72217f.js" defer
@@ -94,17 +94,17 @@ I made it as my first design job with learning Illustrator and Photoshop. The re
 
 <h1 id="team">Team</h1>
 
-<h2 id="gordon-miyamoto-senior-designer">Gordon Miyamoto - Senior Designer</h2>
+<h2 id="gordon-miyamoto">Gordon Miyamoto</h2>
 
-<p>Gave me a feedback</p>
+<p>Senior Designer - Gave me a feedback</p>
 
-<h2 id="fumiya-sorimachi-mentor-designer">Fumiya Sorimachi - Mentor Designer</h2>
+<h2 id="fumiya-sorimachi">Fumiya Sorimachi</h2>
 
-<p>Gave me a feedback</p>
+<p>Mentor Designer - Gave me a feedback</p>
 
-<h2 id="ryuji-watanabe-director">Ryuji Watanabe - Director</h2>
+<h2 id="ryuji-watanabe">Ryuji Watanabe</h2>
 
-<p>Prepared contents</p>
+<p>Director - Prepared contents</p>
 
 <h1 id="process">Process</h1>
 
