--- a/primal-bodycare/index.html
+++ b/primal-bodycare/index.html
@@ -9,7 +9,7 @@
   
   <link rel="stylesheet" href="https://amazonessari.github.io/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.acb4047e26222c92b84bbb2ca10d66a96d11cafa649c9666f22abcf4275f676d.css">
+  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.5a8cbfe1b2492f9a4cc2deb85b417802fe7b14c201bdb05d47630189df1e6915.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
   <script src="https://amazonessari.github.io/js/script.min.7cf1223efd4ed1f8bbfb3ba43f8e3d20a2df8017520c2891f1f927688f72217f.js" defer
@@ -102,9 +102,9 @@ I created the teaser page and the website containing 6 pages for their open.
 
 <h1 id="members">Members</h1>
 
-<h2 id="takuya-shiomi-director">Takuya Shiomi - Director</h2>
+<h2 id="takuya-shiomi">Takuya Shiomi</h2>
 
-<p>Prepared contents</p>
+<p>Director - Prepared contents</p>
 
 <h1 id="background">Background</h1>
 
