--- a/eod/index.html
+++ b/eod/index.html
@@ -9,11 +9,11 @@
   
   <link rel="stylesheet" href="https://amazonessari.github.io/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.5a8cbfe1b2492f9a4cc2deb85b417802fe7b14c201bdb05d47630189df1e6915.css">
+  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.5af37c3656ebc107e070adb309b4da207eedc292a11f36c96b2f872e884bd18e.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
-  <script src="https://amazonessari.github.io/js/script.min.7cf1223efd4ed1f8bbfb3ba43f8e3d20a2df8017520c2891f1f927688f72217f.js" defer
-    integrity="sha256-fPEiPv1O0fi7+zukP449IKLfgBdSDCiR8fknaI9yIX8="></script>
+  <script src="https://amazonessari.github.io/js/script.min.917496efd9dcc61a825937e2241cb86829972d0c9f3b6cd8744011c8c1e3a094.js" defer
+    integrity="sha256-kXSW79ncxhqCWTfiJBy4aCmXLQyfO2zYdEARyMHjoJQ="></script>
 
   
   
@@ -69,8 +69,9 @@
 
 <h1 id="overview">Overview</h1>
 
-<p>When our affiliated company was launched, I created a corporate site to share the outline of the company. I did it with the web design tool STUDIO that allows you to create responsive static sites by dragg and dropp so that non-developers can edit it later.
-<div class="vimeo" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/379406216?loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></p>
+<p>When our affiliated company was launched, I created a corporate site to share the outline of the company. I did it with the web design tool STUDIO that allows you to create responsive static sites by dragg and dropp so that non-developers can edit it later.</p>
+
+<p><a class="visit" href="https://e-od.co.jp/" target="_brank">Visit Website</a></p>
 
 <h1 id="my-role">My role</h1>
 
@@ -103,13 +104,15 @@
 
 <p>I paid the most attention to explaining the relationship by the size of characters and the distance between elements. I avoided long texts and broke down information.</p>
 
+<p><div class="vimeo" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/379406216?loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></p>
+
   </article>
 </div>
 <div class="other-project">
   
   <div class="next-project">
     <h2 class="title">Next</h2>
-    <a href="https://amazonessari.github.io/portfolio-site/"><img class="image" src="/work3.png" /></a>
+    <a href="https://amazonessari.github.io/progrit/"><img class="image" src="/work4.png" /></a>
     <p class="charge">Design &amp; Coding</p>
   </div>
   
@@ -120,7 +123,8 @@
     <p class="charge">Design &amp; Coding</p>
   </div>
   
-</div><div class="modal">
+</div>
+<p class="copy-right">© 2020 ARISA</p><div class="modal">
   <div class="layout">
     <div class="column_left"></div>
     <div class="column_right"></div>
@@ -152,7 +156,7 @@
           fill="white" />
       </svg>
     </div><div class="footer">
-    <p>All made by ARISA</p><div class="sns_link">
+    <p>© 2020 ARISA</p><div class="sns_link">
     
     <a href="mailto:arisa120597@gmail.com" target="_blank">
         <svg class="action" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
