--- a/geeksalon/index.html
+++ b/geeksalon/index.html
@@ -9,11 +9,11 @@
   
   <link rel="stylesheet" href="https://amazonessari.github.io/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.5a8cbfe1b2492f9a4cc2deb85b417802fe7b14c201bdb05d47630189df1e6915.css">
+  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.5af37c3656ebc107e070adb309b4da207eedc292a11f36c96b2f872e884bd18e.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
-  <script src="https://amazonessari.github.io/js/script.min.7cf1223efd4ed1f8bbfb3ba43f8e3d20a2df8017520c2891f1f927688f72217f.js" defer
-    integrity="sha256-fPEiPv1O0fi7+zukP449IKLfgBdSDCiR8fknaI9yIX8="></script>
+  <script src="https://amazonessari.github.io/js/script.min.917496efd9dcc61a825937e2241cb86829972d0c9f3b6cd8744011c8c1e3a094.js" defer
+    integrity="sha256-kXSW79ncxhqCWTfiJBy4aCmXLQyfO2zYdEARyMHjoJQ="></script>
 
   
   
@@ -70,8 +70,7 @@
 <h1 id="overview">Overview</h1>
 
 <p>GeekSalon is a programming community for university students to complete the planning, development, and release of an app in three months.
-Assuming a fictional trial event of this GeekSalon for female students, I designed a landing page as a design assignment with receiving feedback from seniors. However, when I proposed the design to the GeekSalon team, we decided to realize the event in autumn 2019 expecting to create new value and synergy.
-<div class="vimeo" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/379401282?loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></p>
+Assuming a fictional trial event of this GeekSalon for female students, I designed a landing page as a design assignment with receiving feedback from seniors. However, when I proposed the design to the GeekSalon team, we decided to realize the event in autumn 2019 expecting to create new value and synergy.</p>
 
 <h1 id="my-role">My role</h1>
 
@@ -120,7 +119,8 @@ Assuming a fictional trial event of this GeekSalon for female students, I design
 
 <p>Besides, I created a wireframe after setting up a persona and a user scenario to affect users the best. In this project, I took an approach called a horror story that fans a crisis.</p>
 
-<p>After the design, I coded it using a web application bundler called Parcel. It was the first time to write this amount of code, so I learned a lot such as responsive grouping, how to toggle, and how to handle line breaks.</p>
+<p>After the design, I coded it using a web application bundler called Parcel. It was the first time to write this amount of code, so I learned a lot such as responsive grouping, how to toggle, and how to handle line breaks.
+<div class="vimeo" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/379401282?loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></p>
 
   </article>
 </div>
@@ -139,7 +139,8 @@ Assuming a fictional trial event of this GeekSalon for female students, I design
     <p class="charge">Design</p>
   </div>
   
-</div><div class="modal">
+</div>
+<p class="copy-right">© 2020 ARISA</p><div class="modal">
   <div class="layout">
     <div class="column_left"></div>
     <div class="column_right"></div>
@@ -171,7 +172,7 @@ Assuming a fictional trial event of this GeekSalon for female students, I design
           fill="white" />
       </svg>
     </div><div class="footer">
-    <p>All made by ARISA</p><div class="sns_link">
+    <p>© 2020 ARISA</p><div class="sns_link">
     
     <a href="mailto:arisa120597@gmail.com" target="_blank">
         <svg class="action" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
