--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -9,11 +9,11 @@
   
   <link rel="stylesheet" href="https://amazonessari.github.io/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.5a8cbfe1b2492f9a4cc2deb85b417802fe7b14c201bdb05d47630189df1e6915.css">
+  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.5af37c3656ebc107e070adb309b4da207eedc292a11f36c96b2f872e884bd18e.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
-  <script src="https://amazonessari.github.io/js/script.min.7cf1223efd4ed1f8bbfb3ba43f8e3d20a2df8017520c2891f1f927688f72217f.js" defer
-    integrity="sha256-fPEiPv1O0fi7+zukP449IKLfgBdSDCiR8fknaI9yIX8="></script>
+  <script src="https://amazonessari.github.io/js/script.min.917496efd9dcc61a825937e2241cb86829972d0c9f3b6cd8744011c8c1e3a094.js" defer
+    integrity="sha256-kXSW79ncxhqCWTfiJBy4aCmXLQyfO2zYdEARyMHjoJQ="></script>
 
   
   
@@ -58,7 +58,7 @@
   <div class="layout-single">
     <div class="column_center">
       <h2>Design &amp; Coding</h2>
-      <h3>10.2019</h3>
+      <h3>01.2020</h3>
     </div>
   </div>
 </div>
@@ -104,20 +104,15 @@ I learned a lot through the experiments. I am going to continue to take new lear
 </div>
 <div class="other-project">
   
-  <div class="next-project">
-    <h2 class="title">Next</h2>
-    <a href="https://amazonessari.github.io/progrit/"><img class="image" src="/work4.png" /></a>
-    <p class="charge">Design &amp; Coding</p>
-  </div>
-  
   
   <div class="prev-project">
     <h2 class="title">Prev</h2>
-    <a href="https://amazonessari.github.io/eod/"><img class="image" src="/work2.png" /></a>
-    <p class="charge">Design</p>
+    <a href="https://amazonessari.github.io/primal-bodycare/"><img class="image" src="/work5.png" /></a>
+    <p class="charge">Design &amp; Coding</p>
   </div>
   
-</div><div class="modal">
+</div>
+<p class="copy-right">© 2020 ARISA</p><div class="modal">
   <div class="layout">
     <div class="column_left"></div>
     <div class="column_right"></div>
@@ -149,7 +144,7 @@ I learned a lot through the experiments. I am going to continue to take new lear
           fill="white" />
       </svg>
     </div><div class="footer">
-    <p>All made by ARISA</p><div class="sns_link">
+    <p>© 2020 ARISA</p><div class="sns_link">
     
     <a href="mailto:arisa120597@gmail.com" target="_blank">
         <svg class="action" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
