--- a/primal-bodycare/index.html
+++ b/primal-bodycare/index.html
@@ -9,11 +9,11 @@
   
   <link rel="stylesheet" href="https://amazonessari.github.io/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.5a8cbfe1b2492f9a4cc2deb85b417802fe7b14c201bdb05d47630189df1e6915.css">
+  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.5af37c3656ebc107e070adb309b4da207eedc292a11f36c96b2f872e884bd18e.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
-  <script src="https://amazonessari.github.io/js/script.min.7cf1223efd4ed1f8bbfb3ba43f8e3d20a2df8017520c2891f1f927688f72217f.js" defer
-    integrity="sha256-fPEiPv1O0fi7+zukP449IKLfgBdSDCiR8fknaI9yIX8="></script>
+  <script src="https://amazonessari.github.io/js/script.min.917496efd9dcc61a825937e2241cb86829972d0c9f3b6cd8744011c8c1e3a094.js" defer
+    integrity="sha256-kXSW79ncxhqCWTfiJBy4aCmXLQyfO2zYdEARyMHjoJQ="></script>
 
   
   
@@ -70,8 +70,9 @@
 <h1 id="overview">Overview</h1>
 
 <p>Our affiliated company produced a personal body coach that diagnoses, analyzes and improves your body.
-I created the teaser page and the website containing 6 pages for their open.
-<div class="vimeo" style="padding:55.13% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/380892143?loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></p>
+I created the teaser page and the website containing 6 pages for their open.</p>
+
+<p><a class="visit" href="http://primalbodycare.net/" target="_brank">Visit Website</a></p>
 
 <h1 id="my-role">My role</h1>
 
@@ -112,9 +113,17 @@ I created the teaser page and the website containing 6 pages for their open.
 
 <p>In this project, I tried SVG animation. You can specify an id or class name for child elements within an SVG tag in HTML. In figma, if you check &ldquo;Include id Attribute&rdquo; when you export, the group name will be added as id name, which is very convenient.</p>
 
+<p><div class="vimeo" style="padding:55.13% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/380892143?loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></p>
+
   </article>
 </div>
 <div class="other-project">
+  
+  <div class="next-project">
+    <h2 class="title">Next</h2>
+    <a href="https://amazonessari.github.io/portfolio-site/"><img class="image" src="/work3.png" /></a>
+    <p class="charge">Design &amp; Coding</p>
+  </div>
   
   
   <div class="prev-project">
@@ -123,7 +132,8 @@ I created the teaser page and the website containing 6 pages for their open.
     <p class="charge">Design &amp; Coding</p>
   </div>
   
-</div><div class="modal">
+</div>
+<p class="copy-right">© 2020 ARISA</p><div class="modal">
   <div class="layout">
     <div class="column_left"></div>
     <div class="column_right"></div>
@@ -155,7 +165,7 @@ I created the teaser page and the website containing 6 pages for their open.
           fill="white" />
       </svg>
     </div><div class="footer">
-    <p>All made by ARISA</p><div class="sns_link">
+    <p>© 2020 ARISA</p><div class="sns_link">
     
     <a href="mailto:arisa120597@gmail.com" target="_blank">
         <svg class="action" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
