--- a/progrit/index.html
+++ b/progrit/index.html
@@ -7,12 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   
-  <link rel="stylesheet" href="https://amazonessari.github.io/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
+  <link rel="stylesheet" href="http://arifolio.work/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="https://amazonessari.github.io/css/style.min.5af37c3656ebc107e070adb309b4da207eedc292a11f36c96b2f872e884bd18e.css">
+  <link rel="stylesheet" href="http://arifolio.work/css/style.min.55f94eb4b14cc881621ac7ce295edfb15e28d284c0dca5d5981427143121bd58.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
-  <script src="https://amazonessari.github.io/js/script.min.917496efd9dcc61a825937e2241cb86829972d0c9f3b6cd8744011c8c1e3a094.js" defer
+  <script src="http://arifolio.work/js/script.min.917496efd9dcc61a825937e2241cb86829972d0c9f3b6cd8744011c8c1e3a094.js" defer
     integrity="sha256-kXSW79ncxhqCWTfiJBy4aCmXLQyfO2zYdEARyMHjoJQ="></script>
 
   
@@ -22,16 +22,16 @@
   <title>ARIFOLIO</title>
   <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 
-  <meta property="og:url" content="https://amazonessari.github.io/" />
+  <meta property="og:url" content="http://arifolio.work/" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="HOME" />
+  <meta property="og:title" content="Portfolio" />
   <meta property="og:description" content="The designer ARISA's portfolio" />
   <meta property="og:site_name" content="ARIFOLIO" />
-  <meta property="og:image" content="https://amazonessari.github.io//OGP.png" />
+  <meta property="og:image" content="http://arifolio.work//OGP.png" />
 
 </head><body>
 <header><div class="header" style="background: #F39800">
-    <a href="https://amazonessari.github.io/">
+    <a href="http://arifolio.work/">
         <svg class="logo" width="125" height="18" viewBox="0 0 125 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M6.216 0.12H9.768L15.984 17.16H11.952L10.632 13.344H5.328L4.032 17.16H0L6.216 0.12ZM9.984 10.632L7.992 4.608L5.952 10.632H9.984Z"
@@ -118,14 +118,14 @@ I am using the library AOS for the animation when the elements entered the view.
   
   <div class="next-project">
     <h2 class="title">Next</h2>
-    <a href="https://amazonessari.github.io/primal-bodycare/"><img class="image" src="/work5.png" /></a>
+    <a href="http://arifolio.work/primal-bodycare/"><img class="image" src="/work5.png" /></a>
     <p class="charge">Design &amp; Coding</p>
   </div>
   
   
   <div class="prev-project">
     <h2 class="title">Prev</h2>
-    <a href="https://amazonessari.github.io/eod/"><img class="image" src="/work2.png" /></a>
+    <a href="http://arifolio.work/eod/"><img class="image" src="/work2.png" /></a>
     <p class="charge">Design</p>
   </div>
   
@@ -135,7 +135,7 @@ I am using the library AOS for the animation when the elements entered the view.
     <div class="column_left"></div>
     <div class="column_right"></div>
     <div class="header">
-      <a href=" https://amazonessari.github.io/">
+      <a href=" http://arifolio.work/">
         <svg class="logo" width="125" height="18" viewBox="0 0 125 18" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M6.216 0.12H9.768L15.984 17.16H11.952L10.632 13.344H5.328L4.032 17.16H0L6.216 0.12ZM9.984 10.632L7.992 4.608L5.952 10.632H9.984Z"
