--- a/how-i-learned/index.html
+++ b/how-i-learned/index.html
@@ -9,11 +9,11 @@
   
   <link rel="stylesheet" href="http://arifolio.work/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="http://arifolio.work/css/style.min.3452aeb19523c97066eb57a702a55aeaf0837d0ab24b5390ed5b65d5e8910b3f.css">
+  <link rel="stylesheet" href="http://arifolio.work/css/style.min.9bce114fc72207035e8004805f97e37f6d29345a0305f57d67089f91b3003d7a.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
-  <script src="http://arifolio.work/js/script.min.a2ba3faa2ce471525e9d706299cef4977b5f64b509b865856ad60342f07a258d.js" defer
-    integrity="sha256-oro/qizkcVJenXBimc70l3tfZLUJuGWFatYDQvB6JY0="></script>
+  <script src="http://arifolio.work/js/script.min.b8409a107b7e8bda3447decd0e6e3d8ca04f799e12314a94d3e16acd9a7cdd00.js" defer
+    integrity="sha256-uECaEHt+i9o0R97NDm49jKBPeZ4SMUqU0+FqzZp83QA="></script>
 
   
   
@@ -67,53 +67,30 @@
   <article>
     
 
+<h1 id="overview">Overview</h1>
+
+<p>ここでは私のバックグラウンド、デザイナーとして働き始めるまでの道のりについて紹介していきます。</p>
+
+<p>I am sharing my background and my journey to start my design career here.</p>
+
 <h1 id="my-background">My background</h1>
 
-<p>I started customizing HTML/CSS at 12 years old for my diary blog. However, since I was too eager in it, my mom took the laptop away from me soon. Since then, I had not touched a computer.<br>
+<p>私は12歳の時にブログをカスタマイズするためにHTMLとCSSのコーディングを始めました。
+しかし、私があまりにも夢中だったため、すぐにパソコンを取り上げられてしまいました。それから、コンピューターに触れることはずっとありませんでした。<br>
+一方でメディアから海外の文化に影響を受けながらも日本を出る機会は一度もなく、ずっと名古屋で育ちました。海外への憧れはどんどん膨れ上がり、ついに私は高校卒業後に自分でお金を貯め、19歳で海外での生活を始めることにしました。ニュージーランドで語学学生として、オーストラリアでは介護や農業の仕事をしながらしながらバックパッカーとして生活していました。<br>
+旅先では様々なバックグラウンドを持った世界中の人々と出会いました。その中でもIT業界の社長やフリーランサーに強く影響を受け、その柔軟性や創造性のある仕事に憧れるようになりました。
+子供時代を思い出し、デザインとコーディングを夢中になって楽しめる確信が私にはありました。そうして新たなキャリアを始めることに決めたのです。</p>
+
+<p>I started coding HTML/CSS at 12 years old for my diary blog. However, since I was too eager in it, my mom took the laptop away from me soon. Since then, I had not touched a computer.<br>
 Meanwhile, I was dreaming to live abroad because I only grew up in a small town in Japan with seeing other cultures through media but no chance to travel. Finally, I made it to NewZealand and Australia for a long stay at 19 after saving up. <br>
 While meeting travelers from many different backgrounds during the journey, creativity and flexibility of IT field fascinated me a lot.
 I was pretty sure that I would love design and coding looking back on my childhood, so I decided to make a new career.</p>
 
-<div class="md-autoslide">
-<figure>
-    <img src="/how-i-learned/flex1.jpg"/> 
-</figure>
-
-<figure>
-    <img src="/how-i-learned/flex2.jpg"/> 
-</figure>
-
-<figure>
-    <img src="/how-i-learned/flex3.jpg"/> 
-</figure>
-
-<figure>
-    <img src="/how-i-learned/flex4.jpg"/> 
-</figure>
-
-<figure>
-    <img src="/how-i-learned/flex7.jpg"/> 
-</figure>
-
-<figure>
-    <img src="/how-i-learned/flex6.jpg"/> 
-</figure>
-
-<figure>
-    <img src="/how-i-learned/flex5.jpg"/> 
-</figure>
-
-<figure>
-    <img src="/how-i-learned/flex8.jpg"/> 
-</figure>
-
-<figure>
-    <img src="/how-i-learned/flex9.jpg"/> 
-</figure>
-
-</div>
-
 <h1 id="in-the-beginning">In the beginning</h1>
+
+<p>私のキャリアはパソコンを購入するところから始まりました。最後に使ったOSがWindows VistaだったのでWindows10の性能には感動しっぱなしでした。そんなレベルからスタートしました。<br>
+実はこの頃は、デザインが美的センスを伴うものという思いこみがあり、勉強の仕方も分からなかったので、デザイナーを目指してはいませんでした。
+そのためまずはProgateとfreeCodeCampという2つのサービスでコーディングを学び、オーストラリアで勉強会に毎週参加しながらバグの修正やチームプロジェクトに取り組むこともしました。そのクリエイティブな活動はとてもワクワクするものでした。</p>
 
 <p>First, I bought myself a laptop to learn to code in services called Progate and freeCodeCamp. Also, I attended meetup events weekly to fix bugs and develop together in Australia. Creativity excited me a lot, especially in designing.
 <figure>
@@ -124,6 +101,9 @@ I was pretty sure that I would love design and coding looking back on my childho
     <img src="/how-i-learned/2.png"/> 
 </figure>
 </p>
+
+<p>そうして学んでいく中で、幸運にも紹介を通して東京/恵比寿のスタートアップのScovilleにてインターンとして働く機会をもらえました。私がCTOにデザインとフロントエンドを学びたいと言うとスキルセットが違うためどちらか選ぶように言われ、今まで勉強の仕方が分からなかったデザインを学ぶことにしました。
+以下のデザインは無学で作り、2019年5月7日に面談で見せたものです。この日からイギリスでデザインの先生をしていた先輩デザイナーによる特訓が始まりました。</p>
 
 <p>Fortunately, I grabbed a chance to work as a designer intern at Scoville through employee referral.
 These designs below are what I shared in the interview on the 7th of May, 2019.
@@ -137,6 +117,10 @@ These designs below are what I shared in the interview on the 7th of May, 2019.
 </p>
 
 <h1 id="in-the-internship">In the internship</h1>
+
+<p>論理的なデザインを学ぶためにバナーやロゴ、ランディングページのデザイン課題を与えられ、私は遊びやアルバイトを一切せず、起きている時間の殆どを勉強とこの課題に当てました。<br>
+方向性やワイヤーフレームなど、細かいステップ毎に先輩方にアウトプットと共にプレゼンテーションをし、リサーチやプロセス、デザインの論理を述べました。レイアウトから色まで、全てを論理的に説明できる必要があり、それは困難な道のりでしたが何度も回数を重ねて徐々に上達していきました。筋の通ったアウトプットをするためにあらゆるリサーチをし、先輩のフィードバックからも多くの学びを得ました。<br>
+そしてついに約4ヶ月後、課題を終えデザイナーとして仕事を貰えるようになりました。</p>
 
 <p>For the first several months, I had worked on assignments of banner, logo, and LP design from a senior to know how to design logically. I  kept giving them my presentation step by step.
 It contained my research, the progress, and the logic of my output.
@@ -250,7 +234,8 @@ That was a great practice, and I  learned thousands from their feedback.
             start-up <a target="_blank" href="https://sc0ville.com">Scoville</a> in May 2019.
             I improved my design and coding skills rapidly by building 5 websites/pages, after working on assignments
             from our
-            senior designer for several months. I am the case that the length of experience does not matter because I am
+            senior designer for several months. I am the example that the length of experience does not matter because I
+            am
             more
             committed to learn and work on web design with massive passion than any others. I am not going to stop
             growing in this
