--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -9,11 +9,11 @@
   
   <link rel="stylesheet" href="http://arifolio.work/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="http://arifolio.work/css/style.min.3452aeb19523c97066eb57a702a55aeaf0837d0ab24b5390ed5b65d5e8910b3f.css">
+  <link rel="stylesheet" href="http://arifolio.work/css/style.min.9bce114fc72207035e8004805f97e37f6d29345a0305f57d67089f91b3003d7a.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
-  <script src="http://arifolio.work/js/script.min.a2ba3faa2ce471525e9d706299cef4977b5f64b509b865856ad60342f07a258d.js" defer
-    integrity="sha256-oro/qizkcVJenXBimc70l3tfZLUJuGWFatYDQvB6JY0="></script>
+  <script src="http://arifolio.work/js/script.min.b8409a107b7e8bda3447decd0e6e3d8ca04f799e12314a94d3e16acd9a7cdd00.js" defer
+    integrity="sha256-uECaEHt+i9o0R97NDm49jKBPeZ4SMUqU0+FqzZp83QA="></script>
 
   
   
@@ -69,6 +69,10 @@
 
 <h1 id="overview">Overview</h1>
 
+<p>私は仕事のチャンスを広げるために、このサイトをすべて自分で作りました。
+履歴書などの文書からリンクされることを想定しています。
+今回は静的サイトジェネレーターのHUGOを使いました。これにより静的サイトにも関わらずマークダウン形式のファイルを作ることで記事を投稿することが可能になります。</p>
+
 <p>I created this website entirely by myself to broaden job opportunities.
 It is supposed to be attached along with my resume.
 Built by the static site generator HUGO that allows me to post reports in markdown to perform regular updates.</p>
@@ -93,11 +97,14 @@ Built by the static site generator HUGO that allows me to post reports in markdo
 
 <h1 id="process">Process</h1>
 
-<p>It is designed for my works to be conspicuous because they tell the improvement of my skill. It is important for me who has no much background or degree, and also, to prioritize what a website can convey but not a document.</p>
+<p>技術向上を物語る作品そのものに目がいくように設計しました。これは実務経験や学歴がない私にとって重要なことです。また、文章ではなくウェブサイトだからこそ伝えられることだからです。<br>
+今日、モーションデザインやインタラクティブデザインは使いやすさにおいて必要不可欠なものだと思っています。それらを学ぶため、このサイトを通じて多くの実験を重ね、取り入れました。今回は各プロジェクトの強調するためにスライドショー形式にしました。<br>
+私はこの右から左に流れるスライドにものすごく苦労しましたが、要素を横に並べることで解決しました。また、SVG画像はなぜか移行の際にバグが発生することがあり、z-indexを書く必要があります。
+今回の実験を通じて多くを学びました。私はずっと好奇心を持ち続け、新しい学びを取り入れ続けます。<br></p>
 
-<p>Today motion and interactivity are essential to improve usability, so I experimented a lot to incorporate them with learning. It is a slide show to emphasize each project.</p>
-
-<p>I was struggling with the animation to make this slide show flow from right to left but solved it by laying the elements. Also, SVG images may have bugs during transition unless z-index is written.
+<p>It is designed for my works to be conspicuous because they tell the improvement of my skill. It is important for me who has no much background or degree, and also, to prioritize what a website can convey but not a document.<br>
+Today motion and interactivity are essential to improve usability, so I experimented a lot to incorporate them with learning. It is a slide show to emphasize each project.<br>
+I was struggling with the animation to make this slide show flow from right to left but solved it by laying the elements. Also, SVG images may have bugs during transition unless z-index is written.
 I learned a lot through the experiments. I am going to continue to take new learnings.</p>
 
   </article>
@@ -199,7 +206,8 @@ I learned a lot through the experiments. I am going to continue to take new lear
             start-up <a target="_blank" href="https://sc0ville.com">Scoville</a> in May 2019.
             I improved my design and coding skills rapidly by building 5 websites/pages, after working on assignments
             from our
-            senior designer for several months. I am the case that the length of experience does not matter because I am
+            senior designer for several months. I am the example that the length of experience does not matter because I
+            am
             more
             committed to learn and work on web design with massive passion than any others. I am not going to stop
             growing in this
