--- a/eod/index.html
+++ b/eod/index.html
@@ -9,11 +9,11 @@
   
   <link rel="stylesheet" href="http://arifolio.work/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="http://arifolio.work/css/style.min.3452aeb19523c97066eb57a702a55aeaf0837d0ab24b5390ed5b65d5e8910b3f.css">
+  <link rel="stylesheet" href="http://arifolio.work/css/style.min.9bce114fc72207035e8004805f97e37f6d29345a0305f57d67089f91b3003d7a.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
-  <script src="http://arifolio.work/js/script.min.a2ba3faa2ce471525e9d706299cef4977b5f64b509b865856ad60342f07a258d.js" defer
-    integrity="sha256-oro/qizkcVJenXBimc70l3tfZLUJuGWFatYDQvB6JY0="></script>
+  <script src="http://arifolio.work/js/script.min.b8409a107b7e8bda3447decd0e6e3d8ca04f799e12314a94d3e16acd9a7cdd00.js" defer
+    integrity="sha256-uECaEHt+i9o0R97NDm49jKBPeZ4SMUqU0+FqzZp83QA="></script>
 
   
   
@@ -69,7 +69,10 @@
 
 <h1 id="overview">Overview</h1>
 
-<p>When our affiliated company was launched, I created a corporate site to share the outline of the company. I did it with the web design tool STUDIO that allows you to create responsive static sites by dragg and dropp so that non-developers can edit it later.</p>
+<p>姉妹会社EoD発足にあたり、クライアントに会社について知ってもらう事を目的とするコーポレートサイトを作成しました。
+今回は後から非開発者の担当者も編集ができるように、ドラッグ&amp;ドロップで誰でも編集ができるWebデザインツールSTUDIOを使用しました。</p>
+
+<p>When our affiliated company was launched, I created a corporate site to share the outline of the company. I did it with the web design tool STUDIO that allows you to create responsive static sites by drag and drop so that non-developers can edit it later.</p>
 
 <p><a class="visit" href="https://e-od.co.jp/" target="_brank">Visit Website</a></p>
 
@@ -100,9 +103,11 @@
 
 <h1 id="process">Process</h1>
 
-<p>I organized the information based on the documents prepared by the client and visualized using diagrams and illustrations.</p>
+<p>クライアントからもらった文書を元に情報を整理し、図やイラストを使って可視化することでわかりやすい表現に努めました。<br>
+今回、文字サイズや行間のスペースを工夫し各情報の関係を説明することに細心の注意を払いました。また、長文を避け、情報を分類しました。</p>
 
-<p>I paid the most attention to explaining the relationship by the size of characters and the distance between elements. I avoided long texts and broke down information.</p>
+<p>I organized the information based on the documents prepared by the client and visualized using diagrams and illustrations.<br>
+I paid the most attention to explaining the relationship by the size of characters and the distance between elements. I avoided long texts and broke down information.</p>
 
 <p><div class="vimeo" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/379406216?loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></p>
 
@@ -211,7 +216,8 @@
             start-up <a target="_blank" href="https://sc0ville.com">Scoville</a> in May 2019.
             I improved my design and coding skills rapidly by building 5 websites/pages, after working on assignments
             from our
-            senior designer for several months. I am the case that the length of experience does not matter because I am
+            senior designer for several months. I am the example that the length of experience does not matter because I
+            am
             more
             committed to learn and work on web design with massive passion than any others. I am not going to stop
             growing in this
