--- a/manoma/index.html
+++ b/manoma/index.html
@@ -9,11 +9,11 @@
   
   <link rel="stylesheet" href="http://arifolio.work/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="http://arifolio.work/css/style.min.3452aeb19523c97066eb57a702a55aeaf0837d0ab24b5390ed5b65d5e8910b3f.css">
+  <link rel="stylesheet" href="http://arifolio.work/css/style.min.9bce114fc72207035e8004805f97e37f6d29345a0305f57d67089f91b3003d7a.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
-  <script src="http://arifolio.work/js/script.min.a2ba3faa2ce471525e9d706299cef4977b5f64b509b865856ad60342f07a258d.js" defer
-    integrity="sha256-oro/qizkcVJenXBimc70l3tfZLUJuGWFatYDQvB6JY0="></script>
+  <script src="http://arifolio.work/js/script.min.b8409a107b7e8bda3447decd0e6e3d8ca04f799e12314a94d3e16acd9a7cdd00.js" defer
+    integrity="sha256-uECaEHt+i9o0R97NDm49jKBPeZ4SMUqU0+FqzZp83QA="></script>
 
   
   
@@ -69,6 +69,9 @@
 
 <h1 id="overview">Overview</h1>
 
+<p>MANOMAとはソニーが提供する新しいスマートホームサービスです。Amazon Alexaを搭載し音声によるサービスコントロールが可能な上、LTE SIMを挿す事で工事不要で簡単に無線インターネット環境を構築で
+きます。 インターン先の会社ではこのMANOMAを20代の男女を中心に訪問販売しており、対面時に商品説明の際に使われる資料となるフライヤーをデザインさせて頂くことになりました。</p>
+
 <p>MANOMA is a new smart home service provided by SONY.
 Our company sells it targeting 20’s. I designed a flyer as product descriptions used in face-to-face sales.
 I made it as my first design job with learning Illustrator and Photoshop. The reason why I came to design this flyer is because their original flyer did not have a hierarchy. We solved it by emphasizing the message &ldquo;Switch easily at the low price&rdquo;.</p>
@@ -113,12 +116,17 @@ I made it as my first design job with learning Illustrator and Photoshop. The re
 </figure>
 
 
+<p>オモテに一番のポイントとなる「カンタン」をわかりやすく伝えるためにコンセントに繋がっただけの MANOMAのイメージを大きく置き、その次に伝えたい事をシンプルに３つにまとめて伝える事にしまし た。ウラには担当者の料金表のスケッチと、アマゾンアレクサの具体的な使い方を想像出来るようなリビングでの場面を描きました。</p>
+
 <p>On the front, it has the image of the device only plugged in as main to tell “easy”. The benefits are simply summarized into 3 on the bottom. On the other hand, on the back I have placed a frame of a pricing table supposed to be drew by the director, and an image in a scene in a living room to let audience imagine how to use Amazon Alexa specifically.</p>
 
 <figure>
     <img src="/manoma/draft3.png"/> 
 </figure>
 
+
+<p>実は一番苦労したのが料金表です。伝わりやすい、お得に見える、ブランディング合うをクリアするために最善を尽くしました。
+当者のスケッチを元に色々なアイデアを形にしてみて、それぞれの良いところを組み合わせたものが最終的なデザインになりました。</p>
 
 <p>I made a great effort in the pricing table for the benefits to be remarkable.
 I designed various ideas based on director’s sketch, and I combined advantages of each as the final draft.</p>
@@ -228,7 +236,8 @@ I designed various ideas based on director’s sketch, and I combined advantages
             start-up <a target="_blank" href="https://sc0ville.com">Scoville</a> in May 2019.
             I improved my design and coding skills rapidly by building 5 websites/pages, after working on assignments
             from our
-            senior designer for several months. I am the case that the length of experience does not matter because I am
+            senior designer for several months. I am the example that the length of experience does not matter because I
+            am
             more
             committed to learn and work on web design with massive passion than any others. I am not going to stop
             growing in this
