--- a/primal-bodycare/index.html
+++ b/primal-bodycare/index.html
@@ -9,11 +9,11 @@
   
   <link rel="stylesheet" href="http://arifolio.work/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="http://arifolio.work/css/style.min.3452aeb19523c97066eb57a702a55aeaf0837d0ab24b5390ed5b65d5e8910b3f.css">
+  <link rel="stylesheet" href="http://arifolio.work/css/style.min.9bce114fc72207035e8004805f97e37f6d29345a0305f57d67089f91b3003d7a.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
-  <script src="http://arifolio.work/js/script.min.a2ba3faa2ce471525e9d706299cef4977b5f64b509b865856ad60342f07a258d.js" defer
-    integrity="sha256-oro/qizkcVJenXBimc70l3tfZLUJuGWFatYDQvB6JY0="></script>
+  <script src="http://arifolio.work/js/script.min.b8409a107b7e8bda3447decd0e6e3d8ca04f799e12314a94d3e16acd9a7cdd00.js" defer
+    integrity="sha256-uECaEHt+i9o0R97NDm49jKBPeZ4SMUqU0+FqzZp83QA="></script>
 
   
   
@@ -69,6 +69,9 @@
 
 <h1 id="overview">Overview</h1>
 
+<p>姉妹会社が分断された一連の身体のコトを一貫して診断、分析、向上させるパーソナルボディーコーチ primal bodycareをプロデュースをしました。
+それにあたり今回はティザーページと6ページを含むウェブサイトを作成しました。</p>
+
 <p>Our affiliated company produced a personal body coach that diagnoses, analyzes and improves your body.
 I created the teaser page and the website containing 6 pages for their open.</p>
 
@@ -109,9 +112,11 @@ I created the teaser page and the website containing 6 pages for their open.</p>
 
 <h1 id="background">Background</h1>
 
-<p>The main purpose of the website is to penetrate the brand, so I designed it in a simple, elegant way according to their brand.</p>
+<p>このサイトの一番の目的はブランドを浸透させることでした。そのためこのブランディングに合わせてシンプルで上品なデザインに仕上げました。<br>
+今回はSVGアニメーションに挑戦しました。SVGタグ内の子要素はidやclass名を付けることが可能です。Figmaでは「Include id Attribute」にチェックをしてSVGファイルを書き出すとグループ名がそのままid名として要素に加えられるので便利です。</p>
 
-<p>In this project, I tried SVG animation. You can specify an id or class name for child elements within an SVG tag in HTML. In figma, if you check &ldquo;Include id Attribute&rdquo; when you export, the group name will be added as id name, which is very convenient.</p>
+<p>The main purpose of the website is to penetrate the brand, so I designed it in a simple, elegant way according to their brand.<br>
+In this project, I tried SVG animation. You can specify an id or class name for child elements within an SVG tag in HTML. In figma, if you check &ldquo;Include id Attribute&rdquo; when you export, the group name will be added as id name, which is very convenient.</p>
 
 <p><div class="vimeo" style="padding:55.13% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/380892143?loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></p>
 
@@ -220,7 +225,8 @@ I created the teaser page and the website containing 6 pages for their open.</p>
             start-up <a target="_blank" href="https://sc0ville.com">Scoville</a> in May 2019.
             I improved my design and coding skills rapidly by building 5 websites/pages, after working on assignments
             from our
-            senior designer for several months. I am the case that the length of experience does not matter because I am
+            senior designer for several months. I am the example that the length of experience does not matter because I
+            am
             more
             committed to learn and work on web design with massive passion than any others. I am not going to stop
             growing in this
