--- a/progrit/index.html
+++ b/progrit/index.html
@@ -9,11 +9,11 @@
   
   <link rel="stylesheet" href="http://arifolio.work/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="http://arifolio.work/css/style.min.3452aeb19523c97066eb57a702a55aeaf0837d0ab24b5390ed5b65d5e8910b3f.css">
+  <link rel="stylesheet" href="http://arifolio.work/css/style.min.9bce114fc72207035e8004805f97e37f6d29345a0305f57d67089f91b3003d7a.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
-  <script src="http://arifolio.work/js/script.min.a2ba3faa2ce471525e9d706299cef4977b5f64b509b865856ad60342f07a258d.js" defer
-    integrity="sha256-oro/qizkcVJenXBimc70l3tfZLUJuGWFatYDQvB6JY0="></script>
+  <script src="http://arifolio.work/js/script.min.b8409a107b7e8bda3447decd0e6e3d8ca04f799e12314a94d3e16acd9a7cdd00.js" defer
+    integrity="sha256-uECaEHt+i9o0R97NDm49jKBPeZ4SMUqU0+FqzZp83QA="></script>
 
   
   
@@ -69,9 +69,11 @@
 
 <h1 id="overview">Overview</h1>
 
+<p>外部クライアントのインターン募集LPを作成しました。これは特定のターゲットに向けてその情熱を伝えるために作りました。</p>
+
 <p>This is an intern recruitment LP for our clients to communicate enthusiasm to specific targets.</p>
 
-<p><a class="visit" href="https://www.progrit.co.jp/intern/" target="_brank">Visit Website</a></p>
+<p><a class="visit" href="https://www.progrit.co.jp/intern4/" target="_brank">Visit Website</a></p>
 
 <h1 id="my-role">My role</h1>
 
@@ -106,6 +108,10 @@
 <p>Mentor Designer - Gave me a feedback</p>
 
 <h1 id="process">Process</h1>
+
+<p>ユーザーにより効果的にゴールとなるボタンをクリックしてもらうために、コンテンツの流れを意識しながらボタンを設置しました。
+また、クリックできる全ての要素がインタラクティブにデザインされています。
+今回はライブラリのAOSを使って要素がスクリーン内に出入りするアニメーションを加えました。</p>
 
 <p>I set CTA considering the flow of contents to effectively guide users towards the goal conversion. Besides, all clickable elements are interactive.
 I am using the library AOS for the animation when the elements entered the view.</p>
@@ -217,7 +223,8 @@ I am using the library AOS for the animation when the elements entered the view.
             start-up <a target="_blank" href="https://sc0ville.com">Scoville</a> in May 2019.
             I improved my design and coding skills rapidly by building 5 websites/pages, after working on assignments
             from our
-            senior designer for several months. I am the case that the length of experience does not matter because I am
+            senior designer for several months. I am the example that the length of experience does not matter because I
+            am
             more
             committed to learn and work on web design with massive passion than any others. I am not going to stop
             growing in this
