--- a/how-i-learned/index.html
+++ b/how-i-learned/index.html
@@ -9,7 +9,7 @@
   
   <link rel="stylesheet" href="http://arifolio.work/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="http://arifolio.work/css/style.min.9bce114fc72207035e8004805f97e37f6d29345a0305f57d67089f91b3003d7a.css">
+  <link rel="stylesheet" href="http://arifolio.work/css/style.min.b08f9483784b8c8831fa4cae1a7c269e4d4c0373f7daeba9113ff41e3fd6e401.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
   <script src="http://arifolio.work/js/script.min.b8409a107b7e8bda3447decd0e6e3d8ca04f799e12314a94d3e16acd9a7cdd00.js" defer
@@ -71,7 +71,7 @@
 
 <p>ここでは私のバックグラウンド、デザイナーとして働き始めるまでの道のりについて紹介していきます。</p>
 
-<p>I am sharing my background and my journey to start my design career here.</p>
+<p>Here I would like to share my background and my journey to start my design career.</p>
 
 <h1 id="my-background">My background</h1>
 
@@ -82,8 +82,8 @@
 子供時代を思い出し、デザインとコーディングを夢中になって楽しめる確信が私にはありました。そうして新たなキャリアを始めることに決めたのです。</p>
 
 <p>I started coding HTML/CSS at 12 years old for my diary blog. However, since I was too eager in it, my mom took the laptop away from me soon. Since then, I had not touched a computer.<br>
-Meanwhile, I was dreaming to live abroad because I only grew up in a small town in Japan with seeing other cultures through media but no chance to travel. Finally, I made it to NewZealand and Australia for a long stay at 19 after saving up. <br>
-While meeting travelers from many different backgrounds during the journey, creativity and flexibility of IT field fascinated me a lot.
+Meanwhile, I was dreaming to live abroad because I only grew up in a small town in Japan with seeing other cultures through media but no chance to travel. As my dream abroad become bigger and bigger, finally I made it at 19 after saving up. Stayed in NewZealand as a language student, and Australia as a backpacker. <br>
+I met a lot of people from many different backgrounds during the journey, and especially CEO and freelancers in the IT field impacted me so much. The creativity and flexibility fascinated me a lot.
 I was pretty sure that I would love design and coding looking back on my childhood, so I decided to make a new career.</p>
 
 <h1 id="in-the-beginning">In the beginning</h1>
@@ -237,7 +237,7 @@ That was a great practice, and I  learned thousands from their feedback.
             senior designer for several months. I am the example that the length of experience does not matter because I
             am
             more
-            committed to learn and work on web design with massive passion than any others. I am not going to stop
+            committed to learn and work on design with massive passion than any others. I am not going to stop
             growing in this
             field. Please
             check the quality of my work.
