--- a/primal-bodycare/index.html
+++ b/primal-bodycare/index.html
@@ -9,7 +9,7 @@
   
   <link rel="stylesheet" href="http://arifolio.work/css/common.min.4428fa2d8e28b08ea001884ecbc66744a9a75fe8cd5777038aa9e7f4fbcb3579.css">
   
-  <link rel="stylesheet" href="http://arifolio.work/css/style.min.9bce114fc72207035e8004805f97e37f6d29345a0305f57d67089f91b3003d7a.css">
+  <link rel="stylesheet" href="http://arifolio.work/css/style.min.b08f9483784b8c8831fa4cae1a7c269e4d4c0373f7daeba9113ff41e3fd6e401.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" defer></script>
   <script src="http://arifolio.work/js/script.min.b8409a107b7e8bda3447decd0e6e3d8ca04f799e12314a94d3e16acd9a7cdd00.js" defer
@@ -228,7 +228,7 @@ In this project, I tried SVG animation. You can specify an id or class name for 
             senior designer for several months. I am the example that the length of experience does not matter because I
             am
             more
-            committed to learn and work on web design with massive passion than any others. I am not going to stop
+            committed to learn and work on design with massive passion than any others. I am not going to stop
             growing in this
             field. Please
             check the quality of my work.
